# stepik-cpp

./: .gitignore  README.md
code/: .clang-format  .emb_style_c_en.h.swp  CMakeLists.txt  emb_style_c_en.h  emb_style_cpp_en.h  gpp_erors.txt  prompts.txt  script1  script1.cpp  script10.cpp  script2  script2.cpp  script3  script3.cpp  script4  script4.cpp  script5  script5.cpp  script6  script6.cpp  script7  script7.cpp  script8  script8.cpp  script9  script9.cpp  tempCodeRunnerFile.cpp
code/src/: algorithm_bfs_metro.c  algorithm_binary_search_recursion.cpp  algorithm_flood_fill.cpp  algorithm_kadane.cpp  algorithm_sort_bubble_ref.cpp  bit_for_even.cpp  bit_for_power2.cpp  bit_parity_check.cpp  buffer.cpp  class_3singlton.cpp  class_array_arithmetic.cpp  class_bank_card.cpp  class_box_building.cpp  class_check_triangle.cpp  class_cstr_to_token.cpp  class_cstring_to_string.cpp  class_exception_RGB.cpp  class_exception_clock.cpp  class_exception_tictactoe.cpp  class_exception_vector.cpp  class_ext_filter.cpp  class_for_3Dcoordinates.cpp  class_life_inheritance.cpp  class_line.cpp  class_many_constructors.cpp  class_mixin_pattern.cpp  class_nested_in_class.cpp  class_operator_overload.cpp  class_operator_overload2.cpp  class_passw_generator.cpp  class_phonebook.cpp  class_polyline.cpp  class_proxy_tictactoe.cpp  class_rating_sort.cpp  class_rewrite_data.cpp  class_rewrite_data_struct.cpp  class_stack.cpp  class_string_buffer.cpp  class_vote_registry.cpp  class_with_proxy.cpp  (+125 more)
code/tests/: input1.txt  input2.txt  input3.txt  input5.txt
